# tech-shorts

./: .env.example  .gitignore  README.md  pyproject.toml
.state/: published.json
posts/: 2026-04-22-claude-remote-control-hidden-setting.md
scripts/: devto.py  hashnode.py  post.py  shorts.py  state.py
tests/: test_cli.py  test_new.py  test_post.py  test_state.py  test_status.py
tests/fixtures/: sample-post.md
