[project]
name = "tech-shorts"
version = "0.1.0"
description = "Publishing pipeline for unni.tallman short-form technical blog"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
